[package]

name = "freetype-src-sys"
version = "0.1.5"
authors = [ "David Turner", "Robert Wilhelm", "Werner Lemberg", "Alexei Podtelezhnikov", "Suzuki Toshiya (鈴木俊哉)", "Arturo Castro <me@arturocastro.net>" ]
description = "Rust build helpers for freetype. Licensed as GPL2 or FreeType License"
license-file = "freetype-2.8.1/docs/FTL.TXT"
homepage = "http://freetype.org/"
repository = "https://github.com/arturoc/freetype-sys"
links = "freetype2"
build = "build.rs"

[lib]
name = "freetype_sys"
path = "empty.rs"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"

[dependencies]
zlib-src-sys = "0.1.1"

